# Phat_Django

./: .gitignore  README.md  manage.py  pyproject.toml
Accounts/: forms.py  urls.py  views.py
Accounts/templates/: 401.html  home.html  landing_page.html  login.html  signup.html
Api/: urls.py
Api/Models/: Users.py
PhatApp/: apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
PhatApp/migrations/: 0001_initial.py  0002_investment_tracking_rename_invesments_investments_and_more.py
PhatApp/utils/: utils.py
PhatProject/: asgi.py  settings.py  urls.py  wsgi.py
